[package]
name = "pms-slave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
judge-protocol = { git = "https://github.com/polymath-cc/judge-protocol" }
async-std = { version = "1.12.0", features = ["attributes"] }
bincode = "1.3.3"
k256 = { version = "0.11.5", features = ["default", "ecdh", "serde"] }
rand = "0.8.5"
sha3 = "0.10.5"
