[package]
name = "pms-slave"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
judge-protocol = { git = "https://github.com/polymath-cc/judge-protocol" }
async-std = { version = "1.12.0", features = ["attributes"] }
bincode = "1.3.3"
k256 = { version = "0.11.5", features = ["default", "ecdh", "serde"] }
rand = "0.8.5"
sha3 = "0.10.5"
generic-array = { version = "0.14", default-features = false }
tinytemplate = "1.2.1"
tempfile = "3.3.0"
futures = "0.3.24"
async-tar = "0.4.2"
async-compression = { version = "0.3.15", features = ["futures-io", "brotli"] }
num_cpus = "1.13.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

